Add sass and ordered folders

--- a/src/templates/template.html
+++ b/src/templates/template.html
@@ -10,7 +10,8 @@
 <body>
     <h1>Nasza strona w przeglądarce</h1>
     <div></div>
-    <img src="sowa.jpg" alt="sowa">
+    <img src="images/sowa.jpg" alt="sowa">
+    <footer>Stopka</footer>
 </body>
 
 </html>
