Add images module and add few improvments

--- a/src/components/_footer.scss
+++ b/src/components/_footer.scss
@@ -4,7 +4,8 @@ footer {
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: black;
-    color: $bgcolor;
+    background-color: $bgcolor;
+    color: black;
+    background-image: url('../images/photo.jpg');
     height: 80px;
 }
